--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/iText-2.1.7.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jasperreports-4.1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mail.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-3.4.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/redmond-1.0.9.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 8.x Runtime"/>
@@ -19,5 +18,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/ambiente/retaguardaWeb/WebContent/WEB-INF/lib/primefaces-5.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
